--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "animate.css": "^4.1.1",
+    "axios": "^1.6.5",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
@@ -24,6 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
